--- a/rendering_settings/idr0079_membranes_nuclei.yml
+++ b/rendering_settings/idr0079_membranes_nuclei.yml
@@ -3,8 +3,8 @@ channels:
     1:
         label: lynEGFP
         color: 00FF00
-        active: true
-        end: 100.0
-        start: 5.0
-greyscale: false
+    2:
+        label: NLStdTomato
+        color: FF0000
+greyscale: true
 version: 2
